--- a/Take_Home_Test.ipynb
+++ b/Take_Home_Test.ipynb
@@ -2433,6 +2433,29 @@
     {
       "cell_type": "code",
       "source": [
+        "!python --version"
+      ],
+      "metadata": {
+        "id": "RO8Rk4i2WLhX",
+        "outputId": "5b35c50e-9f45-4d9f-8b0b-e105f2bf689f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python 3.10.12\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "!pip install datasets"
       ],
       "metadata": {
@@ -2904,34 +2927,27 @@
         "  for split in dataset.keys():\n",
         "      all_labels.extend(dataset[split]['label'])\n",
         "\n",
-        "  # Hitung frekuensi setiap label\n",
         "  label_counts = Counter(all_labels)\n",
         "\n",
         "  label_counts = {label_name[key]: value for key, value in label_counts.items()}\n",
         "\n",
-        "  # Konversi ke DataFrame untuk plotting yang lebih mudah\n",
         "  df = pd.DataFrame({\n",
         "      'Class': list(label_counts.keys()),\n",
         "      'Count': list(label_counts.values())\n",
         "  })\n",
         "\n",
-        "  # Plotting\n",
         "  plt.figure(figsize=(12, 6))\n",
         "  sns.barplot(data=df, x='Class', y='Count')\n",
         "\n",
-        "  # Customizing plot\n",
         "  plt.title('Distribution of Classes in Trashnet Dataset (All Splits)', pad=20)\n",
         "  plt.xlabel('Class Name')\n",
         "  plt.ylabel('Number of Images')\n",
         "\n",
-        "  # Menambahkan nilai di atas bar\n",
         "  for i, v in enumerate(df['Count']):\n",
         "      plt.text(i, v + 5, str(v), ha='center')\n",
         "\n",
-        "  # Rotasi label untuk keterbacaan yang lebih baik\n",
         "  plt.xticks(rotation=45)\n",
         "\n",
-        "  # Mengatur layout\n",
         "  plt.tight_layout()"
       ],
       "metadata": {
@@ -2988,20 +3004,16 @@
     {
       "cell_type": "code",
       "source": [
-        "num_samples = 10  # Tentukan jumlah sample yang ingin diambil\n",
+        "num_samples = 10\n",
         "samples = dataset.select(range(num_samples))\n",
         "\n",
-        "# Fungsi untuk menghitung total pixel pada setiap gambar\n",
         "def calculate_total_pixels(image):\n",
-        "    # Pastikan gambar berbentuk array NumPy\n",
         "    image_array = np.array(image)\n",
         "    height, width = image_array.shape[:2]\n",
         "    return height, width\n",
         "\n",
-        "# Hitung total pixel untuk setiap gambar\n",
         "results = [calculate_total_pixels(sample['image']) for sample in samples]\n",
         "\n",
-        "# Tampilkan hasil\n",
         "for i, (height, width) in enumerate(results):\n",
         "    print(f\"Image {i+1}: {height}x{width}\")"
       ],
@@ -3116,12 +3128,10 @@
         "image_size = (150, 150)\n",
         "\n",
         "def preprocess(dataset):\n",
-        "    # Resize the image to the target size (e.g., 150x150)\n",
-        "    dataset['image'] = tf.image.resize(dataset['image'], (image_size))  # Using TensorFlow for resizing\n",
+        "    dataset['image'] = tf.image.resize(dataset['image'], (image_size))\n",
         "    dataset['image'] = tf.cast(dataset['image'], tf.float32) / 255.0\n",
         "    return dataset\n",
         "\n",
-        "#Apply the resize function to the dataset\n",
         "train_dataset = train_dataset.map(preprocess)\n",
         "val_dataset = val_dataset.map(preprocess)\n",
         "test_dataset = test_dataset.map(preprocess)"
@@ -3835,7 +3845,7 @@
       "metadata": {
         "id": "NsOpUge90HVc"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3864,7 +3874,7 @@
       "metadata": {
         "id": "uPCpDQK8Q7nN"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3885,7 +3895,7 @@
         "id": "5LtPOCFqQ8Vs",
         "outputId": "4dd0ee70-34ef-45f5-a88a-1780a805f412"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
